name:                stefan-scheme48
version:             0.1.0.0
synopsis:            Scheme Interpreter
homepage:            https://github.com/stefaneng/scheme48
license:             MIT
license-file:        LICENSE
author:              Stefan Eng
maintainer:          stefaneng13@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable stefan-scheme48
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, parsec >= 3, stefan-scheme48
  hs-source-dirs:      scheme
  default-language:    Haskell2010

test-suite spec
  ghc-options:    -Wall
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:  base >=4.7, stefan-scheme48, hspec

library
  exposed-modules:
    Language.Scheme.Types
    Language.Scheme.Parser
    Language.Scheme.Evaluator
    Language.Scheme.Error.Types
    Language.Scheme.Error
  hs-source-dirs:      src
  build-depends:       base >=4.7   && <4.8,
                       parsec >= 3,
                       mtl >= 2.2.1 && <2.3
  default-language:    Haskell2010
